--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.promineotech</groupId>
-  <artifactId>inventoryManagement</artifactId>
+  <artifactId>finalProjectApi</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>inventoryManagement</name>
+  <name>finalProjectApi</name>
   <url>http://maven.apache.org</url>
   
   <parent>
@@ -62,16 +62,18 @@
     </dependency>
     
     <dependency>
-    	<groupId>org.springframework.security</groupId>
-    	<artifactId>spring-security-crypto</artifactId>
-    	<version>5.1.2.RELEASE</version>
-    </dependency>
-    
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+        <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>5.1.2.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
 </project>
