--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/finalProject_api
+spring.datasource.url=jdbc:mysql://localhost/final_Api
 spring.datasource.username=root
 spring.datasource.password=Coffee175
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
